--- a/index.html
+++ b/index.html
@@ -674,6 +674,7 @@
                 });
 
                 updatePaginationControls();
+                sendRequestAuthWebView();
             }
 
             function toggleReminderDetails(index) {
@@ -723,21 +724,23 @@
             // По умолчанию показываем список напоминаний
             // showReminders();
 
-            const backendUrl = "https://14d3-77-46-237-89.ngrok-free.app/api/v1/auth_web_view_v1";
+            function sendRequestAuthWebView() {
+                const backendUrl = "https://14d3-77-46-237-89.ngrok-free.app/api/v1/auth_web_view_v1";
 
-            const initData = window.Telegram.WebApp.initData;
-            fetch(backendUrl, {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ initData }),
-            })
-                .then(response => response.json())
-                .then(data => {
-                    const resultElement = document.createElement("h2");
-                    resultElement.textContent = JSON.stringify(data);
-                    document.body.appendChild(resultElement);
+                const initData = window.Telegram.WebApp.initData;
+                fetch(backendUrl, {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ initData }),
                 })
-                .catch(error => console.error("Error:", error));
+                    .then(response => response.json())
+                    .then(data => {
+                        const resultElement = document.createElement("h2");
+                        resultElement.textContent = JSON.stringify(data);
+                        document.body.appendChild(resultElement);
+                    })
+                    .catch(error => console.error("Error:", error));
+            }
         });
     </script>
 
